removed illuminate/exception dependency

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
 		"aws/aws-sdk-php": "2.5.2",
 		"illuminate/container": "dev-master",
 		"illuminate/database": "dev-master",
-		"illuminate/config": "dev-master",
-		"illuminate/exception": "dev-master"
+		"illuminate/config": "dev-master"
 	},
 	"require-dev" : {
 		"phpspec/phpspec": "2.0.*@dev",
