--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,6 +1,5 @@
 suites:
    phperclip_suite:
       namespace: TippingCanoe\Phperclip
-      spec_prefix: phperclip_spec
-      src_path: ./src
-      spec_path: ./tests
+      src_path:  src
+      spec_path: tests
