--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=5.4.0",
-		"aws/aws-sdk-php": "2.5.2",
+		"aws/aws-sdk-php": "2.5.*",
         "illuminate/support": "4.2.*",
         "illuminate/database": "4.2.*",
         "illuminate/config": "4.2.*"
