--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	"require": {
 		"php": ">=5.4.0",
 		"aws/aws-sdk-php": "2.5.*",
-        "illuminate/support": "4.2.*",
+		"illuminate/http": "4.2.*",
         "illuminate/database": "4.2.*",
         "illuminate/config": "4.2.*"
 	},
