Added message and error passback from file processors, so validation can be performed from within, in a laravel style way.

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
 		"phpspec/phpspec": "2.0.*@dev",
 		"mockery/mockery": "0.9.*@dev"
 	},
+	"suggest": {
+		"cviebrock/image-validator": "Extra Laravel validation rules for dealing with images."
+	},
 	"autoload": {
 		"classmap": [
 			"src/migrations"
