--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,14 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=5.4.0",
-		"aws/aws-sdk-php": "2.5.*",
-		"illuminate/http": "4.2.*",
-        "illuminate/database": "4.2.*",
-        "illuminate/config": "4.2.*",
-		"intervention/image": "2.0.*"
+	  	"illuminate/filesystem": "~5.0",
+	  	"illuminate/database": "~5.0",
+	  	"illuminate/config": "~5.0",
+		"intervention/image": "~2.0"
 	},
 	"require-dev" : {
-		"phpspec/phpspec": "2.0.*@dev",
-		"mockery/mockery": "0.9.*@dev"
+		"phpspec/phpspec": "~2.0",
+		"mockery/mockery": "~0.9"
 	},
 	"suggest": {
 		"cviebrock/image-validator": "Extra Laravel validation rules for dealing with images."
@@ -29,8 +28,8 @@
 		"classmap": [
 			"src/migrations"
 		],
-		"psr-0": {
-			"TippingCanoe\\Phperclip": "src/"
+		"psr-4": {
+			"TippingCanoe\\Phperclip\\": "src/"
 		}
 	},
 	"minimum-stability": "dev"
