--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
 	"require": {
 		"php": ">=5.4.0",
 		"aws/aws-sdk-php": "2.5.*",
-		"illuminate/http": "4.*|5.*",
-        "illuminate/database": "4.*|5.*",
-        "illuminate/config": "4.*|5.*",
+		"illuminate/http": "5.*",
+        "illuminate/database": "5.*",
+        "illuminate/config": "5.*",
 		"intervention/image": "2.0.*"
 	},
 	"require-dev" : {
