move some directories around as they make more sense at the root

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
 	},
 	"autoload": {
 		"classmap": [
-			"src/migrations"
+			"migrations"
 		],
 		"psr-4": {
 			"TippingCanoe\\Phperclip\\": "src/"
