--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
 		"phpspec/phpspec": "2.0.*@dev",
 		"mockery/mockery": "0.9.*@dev"
 	},
+    "replace": {
+      "tippingcanoe/phperclip":"1.2.*"
+    },
 	"suggest": {
 		"cviebrock/image-validator": "Extra Laravel validation rules for dealing with images."
 	},
