--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"authors": [
 		{
 			"name": "Brandon Martel",
-			"email": "b.martel@bmartel.com"
+			"email": "brandonmartel@gmail.com"
 		}
 	],
 	"license": "MIT",
